--- a/directives/src/app/components/if/if.component.html
+++ b/directives/src/app/components/if/if.component.html
@@ -1,1 +1,4 @@
-<p>if works!</p>
+<b *ngIf="true">Serialize Yourself.</b><br />
+<b *ngIf="x < y">Conditional Logic</b><br />
+<b *ngIf="s == 'succ'">Text is Success</b><br />
+<b *ngIf="myFunc()">Function call</b><br />
